maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:79: error: not found: value esfFaceMur
    if(!esfFaceMur())
        ^ShortestPathMaze:83: error: not found: value esfFaceMur
    if(!esfFaceMur())
        ^ShortestPathMaze:87: error: not found: value esfFaceMur
    if(!esfFaceMur())
        ^ShortestPathMaze:91: error: not found: value esfFaceMur
    if(!esfFaceMur())
        ^